--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "mongoose": "^6.2.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
