--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.17.2",
     "mongoose": "^6.2.0",
     "multer": "^1.4.4",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "dotenv": "^16.0.0",
