--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/MatiusRock1/Mongo-db-websockets-Platzi#readme",
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "mongoose": "^6.2.0",
     "multer": "^1.4.4",
