--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MatiusRock1/Mongo-db-websockets-Platzi#readme",
   "dependencies": {
+    "@hapi/boom": "^9.1.4",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
