--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
     "mongoose": "^6.2.0",
     "multer": "^1.4.4",
     "path": "^0.12.7",
